# casperguard

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.MD  README.md  SECURITY.md  SETUP.md  [main 7619e6a] Restore real api.ts  app.js  deploy.mjs  index.html  package-lock.json  package.json  server.cjs  vite.config.ts  xir
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
api/: block.js  mcp.js
contract/: Cargo.toml  Odra.toml  build.rs  deploy_sdk.mjs  register_agent.mjs  rust-toolchain.toml
contract/.cargo/: config.toml
contract/api/: block.js
contract/keys/: public_key_hex
contract/resources/casper_contract_schemas/: casper_guard_schema.json
contract/resources/legacy/: casper_guard_schema.json
contract/src/: lib.rs
gitpaid/: README.md  deploy.js  index.html  package-lock.json  package.json
gitpaid/contracts/: GitPaid.sol  contracts_GitPaid_sol_GitPaid.abi
gitpaid/src/: App.tsx
src/: App.tsx  api.ts  wallet.ts
src/utils/: x402.js  x402.ts
tests/: casperguard.test.cjs  casperguard.test.js
worker/: agent.mjs  agent.py  mcp_client.mjs  mcp_server.py  real_agent.py  real_transfer.py  transfer_v2.mjs  x402_payment.py  x402_real.py  x402_real_payment.mjs  x402_real_payment.py  x402_transfer.mjs
