[package]
name = "casperguard"
version = "1.0.0"
edition = "2021"

[dependencies]
odra = "2.8"

[build-dependencies]
odra-build = "2.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8"

[[bin]]
name = "casperguard_build_contract"
path = "bin/build_contract.rs"
test = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
