[package]
name = "casperguard"
version = "1.0.0"
edition = "2021"

[dependencies]
odra = { version = "2.8", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8", optional = true }

[dev-dependencies]
odra-test = { version = "2.8", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8", features = [], default-features = false }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "casperguard_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casperguard_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy_on_livenet"
path = "bin/deploy_on_livenet.rs"
required-features = ["livenet"]
test = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
